# motriex

./: .gitignore  README.md  motriex.cabal  motriex.proto  stack.yaml
src/: ClientTyApp.hs  Main.hs  Schema.hs
