name:               motriex
version:            0.1.0.0

-- synopsis:
-- description:
homepage:           https://github.com/shleger/motriex#readme
author:             Andrey Shleger
maintainer:         Andrey.Shleger@yandex.ru
copyright:          2022 Andrey Shleger
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md

executable motriex
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    Schema
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-potential-instances
  build-depends:
      base            >=4.12  && <5
    , aeson
    , conduit         >=1.3.2 && <2
    , stm             >=2.5   && <3
    , stm-conduit     >=4     && <5
    , stm-containers  >=1.1   && <2
    , lens
    , monad-logger    >=0.3   && <0.4
    , mu-grpc-server  >=0.4.0
    , mu-lens         >=0.3.0
    , mu-protobuf     >=0.4.0
    , mu-rpc          >=0.4.0
    , mu-schema       >=0.3.0
    , random          >=1.1   && <2
    , stm             >=2.5   && <3
    , text            >=1.2   && <2

executable motriex-client
  main-is:          ClientTyApp.hs
  other-modules:    Schema
  build-depends:
      aeson
    , base            >=4.12  && <5
    , conduit         >=1.3.2 && <2
    , mu-grpc-client  >=0.4.0
    , mu-protobuf     >=0.4.0
    , mu-rpc          >=0.4.0
    , mu-schema       >=0.3.0
    , text            >=1.2   && <2

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall    